# omnicat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml
Formula/: omnicat.rb
assets/: config.default.yaml
demo/: README.md  generate.py  generate.sh  omnicat-demo.tape  smoke.sh
demo/dir-tree/: README.txt
demo/dir-tree/nested/: deep.txt
demo/files/: sample-large.epub  sample-large.mobi  sample.azw3  sample.cbz  sample.csv  sample.doc  sample.docx  sample.eml  sample.epub  sample.fb2  sample.flac  sample.ini  sample.ipynb  sample.json  sample.md  sample.odp  sample.ods  sample.odt  sample.plist  sample.pptx  sample.py  sample.rs  sample.rtf  sample.sqlite  sample.tar  sample.toml  sample.tsv  sample.txt  sample.xlsx  sample.yaml
share/omnicat/: config.default.yaml
share/smartcat/: config.default.yaml
src/: cat.rs  cli.rs  gate.rs  init.rs  lib.rs  main.rs  status.rs
src/config/: mod.rs  resolve.rs  schema.rs
src/content/: code.rs  mod.rs  tree.rs
src/detect/: kind.rs  mime.rs  mod.rs
src/drivers/: archive.rs  code.rs  data.rs  database.rs  directory.rs  ebook.rs  email.rs  external.rs  fallback.rs  font.rs  highlight.rs  image.rs  markdown.rs  markdown_table.rs  media.rs  mod.rs  notebook.rs  pdf.rs  plist.rs  theme.rs
src/drivers/office/: document.rs  legacy.rs  mod.rs  presentation.rs  spreadsheet.rs
src/orchestrator/: mod.rs  registry.rs  resolve.rs
src/preview/: availability.rs  mod.rs
src/sinks/: audio_playback.rs  mod.rs  paginate.rs  styled_table.rs  terminal.rs
src/sinks/gui/: mod.rs
src/sinks/gui/widgets/: hex.rs  image.rs  mod.rs  slides.rs  source_editor.rs  table.rs  tree.rs
test/: run.sh
tests/: integration_cli.rs  integration_render.rs
