[package]
name = "omnicat"
version = "0.7.0"
edition = "2021"
rust-version = "1.92"
description = "Universal file preview for terminal and GUI — a context-aware cat"
license = "MIT"
readme = "README.md"
repository = "https://github.com/s00d/omnicat"
homepage = "https://github.com/s00d/omnicat"

[[bin]]
name = "omnicat"
path = "src/main.rs"

[lib]
name = "omnicat"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arrow = "59"
calamine = "0.35"
cfb = "0.14"
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "7", features = ["custom_styling"] }
crossterm = "0.29"
csv = "1"
eframe = { version = "0.34", default-features = true }
egui = "0.34"
egui_extras = { version = "0.34", features = ["syntect"] }
epub = "2.1"
flate2 = "1"
image = "0.25"
infer = "0.19"
ini = "1"
is-terminal = "0.4"
once_cell = "1"
pulldown-cmark = "0.13"
pdf-extract = "0.10"
mail-parser = "0.11"
mp4parse = "0.17"
parquet = { version = "59", features = ["arrow"] }
plist = { version = "1", features = ["serde"] }
quick-xml = "0.40"
rusqlite = { version = "0.39", features = ["bundled"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sevenz-rust = "0.6"
shell-words = "1"
symphonia = { version = "0.6", features = ["all"] }
rodio = { version = "0.22", default-features = true }
syntect = "5"
tar = "0.4"
thiserror = "2"
toml = "1"
ttf-parser = "0.25"
unicode-width = "0.2"
viuer = { version = "0.11", features = ["print-file"] }
wait-timeout = "0.2"
which = "8"
zip = "8"
bzip2 = "0.6"
xz2 = "0.1"
mobi = "0.8"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
portable-pty = "0.9"
predicates = "3"
tempfile = "3"


[profile.release]
opt-level = "z" # Оптимизация для размера
lto = true # Включение Link Time Optimization
codegen-units = 1 # Уменьшение количества единиц компиляции для лучшей оптимизации
panic = "abort" # Уменьшение объема кода для обработки паник
strip = true # Удаление символов отладки
